--- a/notebooks/triangle_identity.ipynb
+++ b/notebooks/triangle_identity.ipynb
@@ -2,24 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "21d16987-e87c-4f11-ab5c-44de412d6823",
+   "execution_count": 45,
+   "id": "7f0f0309-c6b3-4197-8a04-34b6ca33d7a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "from src.distances import dmat_and_order\n",
     "\n",
-    "ncd_df = pd.read_csv(\"results/vega-lite/vega-lite/ncd_costs.csv\", names=[\"study\", \"notation\", \"from_slug\", \"to_slug\", \"a\", \"b\", \"ab\"])\n",
-    "ncd_df[\"cd\"] = ncd_df[\"ab\"] - ncd_df[[\"a\", \"b\"]].min(axis=1)\n",
-    "ncd_df[\"ncd\"] = (1000 * ncd_df[\"cd\"] / ncd_df[[\"a\", \"b\"]].max(axis=1))\n",
-    "square = ncd_df.pivot_table(index=\"from_slug\", columns=\"to_slug\", values=\"cd\").fillna(0)\n",
+    "dmat, dmat_sym, order = dmat_and_order(\"vega-lite\", \"vega-lite\", \"difflib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "21d16987-e87c-4f11-ab5c-44de412d6823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nicolas/opt/miniconda3/envs/env/lib/python3.9/site-packages/numba/core/ir_utils.py:2152: NumbaPendingDeprecationWarning: \u001b[1m\n",
+      "Encountered the use of a type that is scheduled for deprecation: type 'reflected list' found for argument 'order' of function 'check_triangle_inequality'.\n",
+      "\n",
+      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-reflection-for-list-and-set-types\n",
+      "\u001b[1m\n",
+      "File \"../../../../../var/folders/20/zn579xsd7m3fm3yxbg9kkj640000gp/T/ipykernel_11540/693531916.py\", line 4:\u001b[0m\n",
+      "\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
+      "\u001b[0m\n",
+      "  warnings.warn(NumbaPendingDeprecationWarning(msg, loc=loc))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.975042970829865\n",
+      "67092\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numba import njit\n",
     "\n",
-    "difflib_df = pd.read_csv(\"results/difflib_costs.csv\", names=[\"study\", \"notation\", \"from_slug\", \"to_slug\", \"difflib\"])\n",
-    "square = difflib_df.pivot_table(index=\"from_slug\", columns=\"to_slug\", values=\"difflib\").fillna(0)\n",
-    "order = list(square.index)\n",
     "\n",
-    "def check(X):\n",
+    "@njit\n",
+    "def check_triangle_inequality(X, order):\n",
     "    ok = 0\n",
     "    results = []\n",
     "    for i in range(len(X)):\n",
@@ -27,112 +55,39 @@
     "            for k in range(len(X)):\n",
     "                if X[i,j] > X[i,k]+X[k,j]:\n",
     "                    results.append((i,j,k,order[i],order[j],order[k],X[i,j],X[i,k],X[k,j]))\n",
-    "                else:\n",
-    "                    ok += 1\n",
+    "                    break\n",
     "    return results, ok\n",
     "\n",
-    "#results, ok = check(square.values)\n",
-    "#print(100.0*len(results)/ok)"
+    "results, ok = check_triangle_inequality(dmat_sym, list(order))\n",
+    "print(100.0*len(results)/(len(order)*len(order)))\n",
+    "print(len(results))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6ded1360-a82b-43f1-aefd-5ec127270177",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from numba import njit\n",
-    "\n",
-    "\n",
-    "@njit\n",
-    "def find_edges(dmat):\n",
-    "    n = len(dmat)\n",
-    "    result = np.zeros((n, n))\n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if i == j:\n",
-    "                continue\n",
-    "            has_k = False\n",
-    "            direct = dmat[i, j]\n",
-    "            if direct != 0:\n",
-    "                for k in range(n):\n",
-    "                    if k == i or k == j:\n",
-    "                        continue\n",
-    "                    via_k = dmat[i, k] + dmat[k, j]\n",
-    "                    if (via_k - direct) / direct <= 0:\n",
-    "                        has_k = True\n",
-    "                        break\n",
-    "                if not has_k:\n",
-    "                    result[i, j] = direct\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0b57b2cc-e621-44ce-979d-41f9852862d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edges = find_edges(square.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "b3c86f04-92a6-4a2d-9818-00760ec03b8f",
+   "id": "cb591cb8-8027-4e17-9d0a-803253e7c819",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.5507601309014873"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.count_nonzero(edges)"
+    "from src.network import find_edges\n",
+    "\n",
+    "edges = find_edges(dmat_sym)\n",
+    "\n",
+    "import numpy as np\n",
+    "np.count_nonzero(edges)/np.count_nonzero(dmat_sym)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "cbe17940-b30d-44b7-a40d-bcd4b5720436",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       ...,\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a21fe085-d0d1-4d59-89c1-40da1bb7640f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
