--- a/notebooks/spanner.ipynb
+++ b/notebooks/spanner.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "a7852626-55d2-4652-a3ab-c3680c776e5f",
    "metadata": {},
    "outputs": [],
@@ -38,23 +38,23 @@
     "    for i,j in tqdm(zip(ind[0], ind[1]), total=len(ind[0])):\n",
     "        if i<j: continue\n",
     "        d = distances[i,j]\n",
-    "        shortest = dijkstra(adj, indices=i, directed=False, min_only=True, limit=t*d)[j]\n",
-    "        if shortest > t*d:\n",
-    "            adj[i,j] = d\n",
-    "            adj[j,i] = d\n",
+    "        shortest = dijkstra(adj, indices=i, min_only=True, limit=t*d)[j]\n",
+    "        if shortest <= t*d: continue\n",
+    "        adj[i,j] = d\n",
+    "        adj[j,i] = d\n",
     "    return adj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "6b9ea6b6-82a0-4723-ad3c-10fb7dc35e8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b469c528a3c74819b43ab086bab69c33",
+       "model_id": "850ce835226140e8959600e85883998c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,22 +67,22 @@
     }
    ],
    "source": [
-    "adj = spanner_adj(dmat_sym, 1.5)"
+    "adj = spanner_adj(dmat_sym, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "863073ed-13d6-4945-aa6b-2c6abcbf6969",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.04234690954917798"
+       "0.0038308414962479236"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,45 +93,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98adcb30-51e6-4adf-8935-3938c28748ca",
+   "execution_count": 46,
+   "id": "8e107f85-1c4e-4a34-bf9e-c8de5ae28951",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import networkx as nx"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0a709622-46a2-48a5-8270-63a2dcc4223b",
+   "execution_count": 49,
+   "id": "f7fef5b3-2713-4549-8a80-f3682d4f935a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.from_numpy_matrix(dmat_sym)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "44e0cd99-9bdd-4bf6-995f-5ae7db90a984",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5753f20034084abe8ace7a5a22f679d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=3.0, description='t', max=5.0, min=1.0), Output()), _dom_classes=('wid…"
+       "139656"
       ]
      },
+     "execution_count": 109,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dmat, dmat_sym, order = dmat_and_order(\"vega-lite\", \"vega-lite\", \"nmi\")\n",
-    "\n",
-    "@interact\n",
-    "def do(t=(1.0,5.0)):\n",
-    "    return nx.draw_kamada_kawai(nx.from_numpy_matrix(np.tril(spanner_adj(dmat_sym, t))))"
+    "G2 = nx.spanner(G, 2)\n",
+    "len(G2.edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a3d810cc-f946-444d-ba0a-1795dcf8576a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139656"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(G.edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f2c35070-34f1-46cd-bf2b-684eee7f42c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "networkx.classes.graph.Graph"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(G)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a315a21-c3ef-4747-8ab7-86c5a76a7755",
+   "id": "990562c5-848b-4f32-9c22-83bc35e4e261",
    "metadata": {},
    "outputs": [],
    "source": []
