--- a/notebooks/nmi_v_size.ipynb
+++ b/notebooks/nmi_v_size.ipynb
@@ -27,7 +27,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>slug</th>\n",
+              "      <th>spec</th>\n",
               "      <th>notation</th>\n",
               "      <th>token</th>\n",
               "    </tr>\n",
@@ -105,7 +105,7 @@
               "</div>"
             ],
             "text/plain": [
-              "                    slug        notation  token\n",
+              "                    spec        notation  token\n",
               "0           area_colored         ggplot2     28\n",
               "1           area_colored  plotly_express     31\n",
               "2           area_colored       vega-lite     27\n",
@@ -129,9 +129,9 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "tokens_df = pd.read_csv(\"results/tokens.tsv\", names=[\"gallery\", \"notation\", \"slug\", \"token\"], delimiter=\"\\t\")\n",
+        "tokens_df = pd.read_csv(\"results/tokens.tsv\", names=[\"gallery\", \"notation\", \"spec\", \"token\"], delimiter=\"\\t\")\n",
         "\n",
-        "df = tokens_df.query(\"gallery == 'movies'\").groupby([\"slug\", \"notation\"])[\"token\"].nunique().reset_index()\n",
+        "df = tokens_df.query(\"gallery == 'movies'\").groupby([\"spec\", \"notation\"])[\"token\"].nunique().reset_index()\n",
         "df"
       ]
     },
@@ -184,8 +184,8 @@
               "      <th></th>\n",
               "      <th>gallery</th>\n",
               "      <th>notation</th>\n",
-              "      <th>from_slug</th>\n",
-              "      <th>to_slug</th>\n",
+              "      <th>from_spec</th>\n",
+              "      <th>to_spec</th>\n",
               "      <th>difflib</th>\n",
               "      <th>a</th>\n",
               "      <th>b</th>\n",
@@ -356,7 +356,7 @@
               "</div>"
             ],
             "text/plain": [
-              "       gallery   notation             from_slug             to_slug  difflib  \\\n",
+              "       gallery   notation             from_spec             to_spec  difflib  \\\n",
               "1238  movies    ggplot2  bar_count_horizontal   bar_count_ordered        4   \n",
               "1239  movies    ggplot2  bar_count_horizontal          bar_budget       13   \n",
               "1240  movies    ggplot2  bar_count_horizontal                 box        6   \n",
@@ -422,7 +422,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>notation</th>\n",
-              "      <th>from_slug</th>\n",
+              "      <th>from_spec</th>\n",
               "      <th>a</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -499,7 +499,7 @@
               "</div>"
             ],
             "text/plain": [
-              "     notation                   from_slug    a\n",
+              "     notation                   from_spec    a\n",
               "0     ggplot2                area_colored  252\n",
               "1     ggplot2        area_colored_stacked  264\n",
               "2     ggplot2                  bar_budget  204\n",
@@ -549,7 +549,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>slug</th>\n",
+              "      <th>spec</th>\n",
               "      <th>notation</th>\n",
               "      <th>token</th>\n",
               "    </tr>\n",
@@ -627,7 +627,7 @@
               "</div>"
             ],
             "text/plain": [
-              "                    slug        notation  token\n",
+              "                    spec        notation  token\n",
               "0           area_colored         ggplot2     28\n",
               "1           area_colored  plotly_express     31\n",
               "2           area_colored       vega-lite     27\n",
@@ -680,7 +680,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>notation</th>\n",
-              "      <th>slug</th>\n",
+              "      <th>spec</th>\n",
               "      <th>size</th>\n",
               "      <th>median_nmi</th>\n",
               "    </tr>\n",
@@ -769,7 +769,7 @@
               "</div>"
             ],
             "text/plain": [
-              "     notation                        slug  size  median_nmi\n",
+              "     notation                        spec  size  median_nmi\n",
               "0     ggplot2                area_colored   252         136\n",
               "1     ggplot2        area_colored_stacked   264         144\n",
               "2     ggplot2                  bar_budget   204          80\n",
@@ -791,8 +791,8 @@
         }
       ],
       "source": [
-        "perspec = dist.groupby([\"notation\", \"from_slug\"]).agg({'a' : ['mean'], 'nmi' : ['median']}).reset_index()\n",
-        "perspec.columns = [\"notation\", \"slug\", \"size\", \"median_nmi\"]\n",
+        "perspec = dist.groupby([\"notation\", \"from_spec\"]).agg({'a' : ['mean'], 'nmi' : ['median']}).reset_index()\n",
+        "perspec.columns = [\"notation\", \"spec\", \"size\", \"median_nmi\"]\n",
         "perspec"
       ]
     },
@@ -2049,7 +2049,7 @@
         }
       ],
       "source": [
-        "px.scatter(perspec, x=\"size\", y=\"median_nmi\", color=\"notation\", hover_name=\"slug\", height=600, width=600)"
+        "px.scatter(perspec, x=\"size\", y=\"median_nmi\", color=\"notation\", hover_name=\"spec\", height=600, width=600)"
       ]
     },
     {
