--- a/notebooks/token_entropy.ipynb
+++ b/notebooks/token_entropy.ipynb
@@ -17,7 +17,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "tokens_df = pd.read_csv(\"results/tokens.tsv\", names=[\"gallery\", \"notation\", \"slug\", \"token\"], delimiter=\"\\t\")"
+        "tokens_df = pd.read_csv(\"results/tokens.tsv\", names=[\"gallery\", \"notation\", \"spec\", \"token\"], delimiter=\"\\t\")"
       ]
     },
     {
@@ -30,10 +30,10 @@
         "gallery = \"movies\"\n",
         "notation = \"vega-lite\"\n",
         "\n",
-        "filtered = tokens_df.query(f\"gallery=='{gallery}' and notation=='{notation}'\").groupby(\"token\").nunique(\"slug\")\n",
-        "max_count = filtered[\"slug\"].max()\n",
+        "filtered = tokens_df.query(f\"gallery=='{gallery}' and notation=='{notation}'\").groupby(\"token\").nunique(\"spec\")\n",
+        "max_count = filtered[\"spec\"].max()\n",
         "trie = dict()\n",
-        "for token, count in filtered[\"slug\"].items():\n",
+        "for token, count in filtered[\"spec\"].items():\n",
         "    pointer = trie\n",
         "    for c in token:\n",
         "        if c not in pointer:\n",
