recheck environment and support for hvplot and holoviews and bokeh 3.1.1

--- a/notebooks/paper_figures.ipynb
+++ b/notebooks/paper_figures.ipynb
@@ -1187,14 +1187,15 @@
          "rangemode": "tozero",
          "title": {
           "text": "Remoteness in altair"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
          "anchor": "x",
          "constrain": "domain",
          "domain": [
-          0,
-          1
+          0.02777777777777779,
+          0.9722222222222222
          ],
          "dtick": 200,
          "range": [
@@ -1206,7 +1207,8 @@
          "scaleratio": 1,
          "title": {
           "text": "Remoteness in ggplot2"
-         }
+         },
+         "type": "linear"
         }
        }
       }
@@ -2369,14 +2371,15 @@
          "rangemode": "tozero",
          "title": {
           "text": "Length in altair"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
          "anchor": "x",
          "constrain": "domain",
          "domain": [
-          0,
-          1
+          0.02777777777777779,
+          0.9722222222222222
          ],
          "dtick": 350,
          "range": [
@@ -2388,7 +2391,8 @@
          "scaleratio": 1,
          "title": {
           "text": "Length in ggplot2"
-         }
+         },
+         "type": "linear"
         }
        }
       }
@@ -5456,17 +5460,24 @@
         "width": 800,
         "xaxis": {
          "anchor": "y",
+         "autorange": true,
          "domain": [
           0,
           1
          ],
+         "range": [
+          0,
+          575.2631578947369
+         ],
          "rangemode": "tozero",
          "title": {
           "text": "Specification Remoteness (cd)"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
          "anchor": "x",
+         "autorange": true,
          "categoryarray": [
           "vega-lite",
           "seaborn_obj",
@@ -5483,9 +5494,14 @@
           0,
           1
          ],
+         "range": [
+          -0.5,
+          8.5
+         ],
          "title": {
           "text": ""
-         }
+         },
+         "type": "category"
         }
        }
       }
@@ -5618,7 +5634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
