--- a/notebooks/compression_test.ipynb
+++ b/notebooks/compression_test.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "zlib     a / a+a 0.9628\n",
-      "zlib     b / b+b 0.9588\n",
+      "zlib     b / b+b 0.9577\n",
       "zlib   a+b / b+a 1.0016\n",
       "lzma     a / a+a 0.9799\n",
       "lzma     b / b+b 0.9853\n",
@@ -33,6 +33,34 @@
     "    print(k, \"    a / a+a %.4f\" % (len(v(a))/len(v(a+a))))\n",
     "    print(k, \"    b / b+b %.4f\" % (len(v(b))/len(v(b+b))))\n",
     "    print(k, \"  a+b / b+a %.4f\" % (len(v(a+b))/len(v(b+a))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 10)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lz4.frame.compress(bytes(\"geom_line\", \"utf-8\")))\n",
+    "\n",
+    "def c(x):\n",
+    "    return len(zlib.compress(bytes(x, \"utf-8\")))\n",
+    "\n",
+    "def cd(a,b):\n",
+    "    return c(a+b) - min(c(a), c(b))\n",
+    "\n",
+    "cd(\"geom_point\", \"geom_line\"), cd(\"geom_point\", \"facet_wrap\")"
    ]
   },
   {
@@ -200,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
